--- a/css/main.css
+++ b/css/main.css
@@ -1422,6 +1422,10 @@ body {
 }
 
 @media (max-width: 991px) {
+    .wrap {
+        width: 100%;
+    }
+
     .nav ul {
         font-size: 16px;
     }
