--- a/css/text-page.css
+++ b/css/text-page.css
@@ -1422,6 +1422,10 @@ body {
 }
 
 @media (max-width: 991px) {
+    .wrap {
+        width: 100%;
+    }
+
     .nav ul {
         font-size: 16px;
     }
@@ -1612,6 +1616,14 @@ body {
     }
 }
 
+.item30 {
+    width: 30%;
+}
+
+.item70 {
+    width: 70%;
+}
+
 .text-page {
     margin-top: 90px;
 }
@@ -1620,7 +1632,7 @@ body {
     padding: 30px 80px;
 }
 
-.page-top .item25 {
+.page-top .item30 {
     border-right: 0.5px solid rgba(126, 131, 128, 0.6);
 }
 
@@ -1633,7 +1645,7 @@ body {
     border-bottom: 1px solid rgba(126, 131, 128, 0.6);
 }
 
-.page-mid .item25 {
+.page-mid .item30 {
     border-right: 0.5px solid rgba(126, 131, 128, 0.6);
 }
 
@@ -1652,6 +1664,13 @@ body {
     margin-bottom: 25px;
 }
 
+.left-menu ul li:hover {
+    border-left: 4px solid #ee3d40;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
 .left-menu ul li:last-child {
     margin-bottom: 0;
 }
@@ -1668,6 +1687,7 @@ body {
     -ms-flex-align: center;
     align-items: center;
     font-size: 16px;
+    line-height: 20px;
     color: #b7b7b7;
     padding-left: 35px;
     padding-right: 35px;
@@ -1692,6 +1712,8 @@ body {
 .left-menu-bot {
     padding: 30px 38px;
     border-top: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+    cursor: pointer;
 }
 
 .left-menu-bot a {
@@ -1708,8 +1730,14 @@ body {
     transition: 0.3s;
 }
 
-.text-wrap {
+.text-title {
     padding: 30px 80px;
+}
+
+.text-wrap {
+    border-top: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-bottom: 0.5px solid rgba(126, 131, 128, 0.6);
+    padding: 60px 80px 30px 80px;
 }
 
 .right-content h1 {
@@ -1727,13 +1755,12 @@ body {
 
 .right-content img {
     width: 100%;
-    margin-bottom: 40px;
+    margin-left: 1px;
 }
 
 .text-form {
     padding: 75px 80px;
     background-color: #ee3d40;
-    margin-bottom: 40px;
 }
 
 .text-form h1 {
@@ -1797,6 +1824,18 @@ body {
     border: 0;
     margin-right: 25px;
     height: 81px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.button-wrap button:hover {
+    background-color: transparent;
+    color: #ffffff;
+    border: 4px solid #f15a5c;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
 }
 
 .button-wrap {
@@ -1821,4 +1860,349 @@ body {
     font-size: 20px;
     margin-bottom: 40px;
     font-weight: 600;
+}
+
+.page-bot .wrap {
+    border-left: 0.5px solid rgba(126, 131, 128, 0.6);
+    border-right: 0.5px solid rgba(126, 131, 128, 0.6);
+}
+
+.work_obj_title {
+    font-size: 36px;
+    font-weight: 600;
+    color: #333333;
+    padding: 60px 0;
+}
+
+.work_obj {
+    width: 100%;
+    padding: 30px 60px;
+}
+
+.work_obj_wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin: 0 -25px;
+}
+
+.work_obj_item {
+    display: block;
+    overflow: hidden;
+    position: relative;
+    width: -webkit-calc(100% / 3 - 50px);
+    width: calc(100% / 3 - 50px);
+    margin: 0 25px;
+}
+
+.work_obj_item img {
+    width: 100%;
+    height: auto;
+}
+
+.work_obj_item:hover .work_obj_item_sub {
+    bottom: 0;
+}
+
+.work_obj_item_sub {
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    position: absolute;
+    bottom: -50%;
+    width: 100%;
+    padding: 35px;
+    height: 100%;
+    background-color: rgba(51, 51, 51, 0.2);
+    -webkit-box-shadow: 1px 1px 10px rgba(51, 51, 51, 0.5);
+    box-shadow: 1px 1px 10px rgba(51, 51, 51, 0.5);
+}
+
+.work_obj_item_sub > span {
+    height: 50%;
+    display: block;
+    width: 100%;
+    font-size: 20px;
+    line-height: 28px;
+    font-weight: 600;
+    color: #ffffff;
+}
+
+.work_obj_item_sub .button-arrow {
+    height: 50%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+    -webkit-align-items: flex-end;
+    -ms-flex-align: end;
+    align-items: flex-end;
+    text-decoration: none;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.button-arrow span {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 700;
+    color: #ffffff;
+    text-decoration: none;
+}
+
+.button-arrow:hover {
+    text-decoration: none;
+    margin-left: 10px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.button-arrow .arrow-img {
+    width: 38px;
+    height: 38px;
+    -webkit-border-radius: 100%;
+    border-radius: 100%;
+    border: 1px solid #ffffff;
+    margin-left: 20px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: relative;
+}
+
+.button-arrow .arrow-img div {
+    margin-left: -3px;
+    position: relative;
+    width: 7px;
+    -webkit-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    height: 7px;
+    border-bottom: 2px solid #ffffff;
+    border-right: 2px solid #ffffff;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+}
+
+.work_obj_more.button-arrow {
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+    -ms-flex-align: center;
+    align-items: center;
+    margin-top: 65px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    margin-bottom: 40px;
+}
+
+.work_obj_more.button-arrow span {
+    color: #333333;
+    font-weight: 700;
+    margin: 0;
+}
+
+.work_obj_more.button-arrow .arrow-img {
+    border-color: #828282;
+}
+
+.work_obj_more.button-arrow .arrow-img div {
+    border-color: #000000;
+}
+
+.page-bottom-form {
+    background-color: #fafafa;
+}
+
+.page-bottom-form form {
+    padding: 80px 60px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+}
+
+.page-bottom-form form h1 {
+    font-size: 36px;
+    font-weight: 600;
+    color: #333333;
+    width: 100%;
+    margin-bottom: 45px;
+}
+
+.page-bottom-form form .input-wrap input {
+    height: 85px;
+    width: 300px;
+    border: 4px solid #ededed;
+    margin-right: 40px;
+    padding: 25px 40px;
+}
+
+.page-bottom-form form .input-wrap input::-webkit-input-placeholder {
+    color: #333333;
+    font-weight: 700;
+}
+
+.page-bottom-form form .input-wrap input::-moz-placeholder {
+    color: #333333;
+    font-weight: 700;
+}
+
+.page-bottom-form form .input-wrap input::-ms-input-placeholder {
+    color: #333333;
+    font-weight: 700;
+}
+
+.page-bottom-form form .input-wrap input::placeholder {
+    color: #333333;
+    font-weight: 700;
+}
+
+.page-bottom-form form .button-wrap {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
+}
+
+.page-bottom-form form .button-wrap p {
+    width: 285px;
+    margin-top: 15px;
+    font-size: 13px;
+    line-height: 20px;
+}
+
+.page-bottom-form form .button-wrap button {
+    background-color: #ee3d40;
+    color: #ffffff;
+}
+
+.page-bottom-form form .button-wrap button:hover {
+    border-color: #ededed;
+    background-color: #ffffff;
+    color: #333333;
+}
+
+@media (max-width: 1199px) {
+    .work_obj_item_sub > span {
+        font-size: 18px;
+    }
+
+    .work_obj_item_sub {
+        padding: 15px;
+    }
+
+    .page-bottom-form form .input-wrap input {
+        width: 245px;
+    }
+
+    .page-bottom-form form .button-wrap button {
+        width: 225px;
+        margin-right: 0;
+    }
+
+    .page-bottom-form form .button-wrap p {
+        width: 228px;
+    }
+
+    .page-bottom-form form {
+        -webkit-box-pack: justify;
+        -webkit-justify-content: space-between;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+    }
+}
+
+@media (max-width: 991px) {
+    .text-title {
+        padding: 30px;
+    }
+
+    .left-menu ul li a {
+        padding: 0 25px;
+    }
+
+    .left-menu-bot {
+        padding: 30px 20px;
+    }
+
+    .text-wrap {
+        padding: 60px 30px 60px 30px;
+    }
+
+    .text-form {
+        padding: 60px 30px;
+    }
+
+    .work_obj {
+        padding: 30px;
+    }
+
+    .contact-form {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+        flex-direction: column;
+    }
+
+    .page-bottom-form .input-wrap {
+        width: 100%;
+        margin-bottom: 30px;
+    }
+
+    .page-bottom-form form .input-wrap input {
+        width: 50%;
+    }
+
+    .page-bottom-form form {
+        padding: 40px 30px;
+    }
+
+    .page-bottom-form form .button-wrap {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -ms-flexbox;
+        display: flex;
+        width: 100%;
+        -webkit-box-pack: end;
+        -webkit-justify-content: flex-end;
+        -ms-flex-pack: end;
+        justify-content: flex-end;
+    }
 }
